# IR_vision_2026

./: .gitignore  bringup.sh  build.sh  remote_debug_bringup.sh  remove_build.bash  set_camera.sh
Camera/Data/: 042021420013.mvdat
Camera/log/: error_20260408-134253.104433  warning_20260408-131728.100251  warning_20260408-212613.21345
install/: local_setup.sh  setup.sh
install/car_control/lib/car_control/: car_control
install/car_control/share/ament_index/resource_index/parent_prefix_path/: car_control
install/car_control/share/car_control/: package.sh
install/dji_action4_camera/lib/dji_action4_camera/: camera_node
install/dji_action4_camera/share/ament_index/resource_index/package_run_dependencies/: dji_action4_camera
install/dji_action4_camera/share/dji_action4_camera/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dji_action4_camera/share/dji_action4_camera/cmake/: dji_action4_cameraConfig.cmake
install/mindvision_camera/lib/mindvision_camera/: mindvision_camera_node
install/mindvision_camera/share/mindvision_camera/: local_setup.sh  package.sh
install/rplidar_ros/lib/rplidar_ros/: rplidar_composition
install/rplidar_ros/share/rplidar_ros/: package.sh
install/usb_camera/lib/usb_camera/: usb_camera
install/usb_camera/share/ament_index/resource_index/package_run_dependencies/: usb_camera
install/usb_camera/share/usb_camera/: package.sh  package.xml
log/: latest_build
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim_interfaces/msg/: Cmd.msg  McuFeedBack.msg
src/camera_mount_calibration/: CMakeLists.txt  package.xml
src/camera_mount_calibration/config/: camera_mount_calibration_params.yaml
src/camera_mount_calibration/include/camera_mount_calibration/: camera_mount_calibration_node.hpp
src/camera_mount_calibration/launch/: camera_mount_calibration.launch.py
src/camera_mount_calibration/src/: camera_mount_calibration_node.cpp
src/car_bringup/: CMakeLists.txt  package.xml
src/car_bringup/launch/: car_bringup.launch.py
src/car_control/: CMakeLists.txt  package.xml
src/car_control/config/: car_control_params.yaml
src/car_control/include/car_control/: car_control_node.hpp  tag_detector.hpp
src/car_control/launch/: car_control_launch.py
src/car_control/src/: car_control_node.cpp  debug_tools.cpp  tag_detector.cpp
src/driver/dji_Action4_camera/: CMakeLists.txt  README.md  package.xml
src/driver/dji_Action4_camera/src/: camera_node.cpp
src/driver/mindvision_camera/: CMakeLists.txt  README.md
src/driver/mindvision_camera/config/: camera_info.yaml  camera_params.yaml
src/driver/mindvision_camera/src/: mv_camera_node.cpp
src/driver/mvcc_camera_ros2/: CMakeLists.txt
src/driver/mvcc_camera_ros2/common/: hik_camera.h
src/driver/mvcc_camera_ros2/config/: hik_camera_config.yaml
src/driver/mvcc_camera_ros2/launch/: connect_by_config.xml
src/driver/mvcc_camera_ros2/src/: create_camera_image_pub.cpp  hik_camera.cpp
src/driver/usb_camera/: CMakeLists.txt
src/driver/usb_camera/include/usb_camera/: uab_camera_node.hpp
src/driver/usb_camera/src/: usb_camera_node.cpp
src/driver/wit_ros2_imu/launch/: rviz_and_imu.launch.py
src/driver/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
src/imu_odometry/: CMakeLists.txt  package.xml
src/imu_odometry/launch/: imu_odometry.launch.py
src/imu_odometry/src/: imu_odometry_node.cpp
src/lc_rm_serial/: CMakeLists.txt  README.md  package.xml
src/lc_rm_serial/include/lc_serial_test/: lc_serial_test.hpp
src/lc_rm_serial/src/: lc_serial_test.cpp
